--- a/sass/layaut/_container-footer.scss
+++ b/sass/layaut/_container-footer.scss
@@ -92,3 +92,29 @@
   list-style-type: none;
   font-style: normal;
 }
+
+.contacts-box {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 1199px) {
+  .contacts-box {
+    align-items: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .wrap {
+    justify-content: space-between;
+  }
+  .logo-footer {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .wrap {
+    max-width: 610px;
+    margin: 0 auto;
+    display: flex;
+    align-items: baseline;
+  }
+}
